# NotionMiniApp

./: .gitignore  conftest.py  pyproject.toml
app/: notion_request.py  request_interface.py
tests/: test_notion_request.py
